[package]
name = "cryptos-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8.5"
num-traits = "0.2"
num-integer = "0.1"
lazy_static = "1.4.0"
