[package]
name = "cryptos-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8.5"
num-traits = "0.2"
num-integer = "0.1"
lazy_static = "1.4.0"
ring = "0.16.20"
ripemd = "0.1.3"
hex = "0.4.3"
